<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:background="@color/colorPrimary"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/profile_pic"
                app:civ_border_color="@color/colorPrimary"
                app:civ_border_width="0dp"
                android:elevation="1dp"
                android:layout_centerHorizontal="true"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="85dp"
                    app:cardCornerRadius="0dp"
                    app:contentPaddingBottom="15dp"
                    app:contentPaddingLeft="15dp"
                    app:contentPaddingRight="15dp"
                    app:contentPaddingTop="15dp"
                    app:cardElevation="0dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="60dp"
                            android:text="@string/label_full_name"
                            android:textSize="25sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:id="@+id/linear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="40dp">
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#dad8d8"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        >
                        <TextView
                            android:layout_weight="1"
                            android:id="@+id/text_view_track"
                            android:textSize="16sp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/label_track"
                            android:textColor="#a2a1b8"
                            android:padding="16dp"
                            android:gravity="start"
                            />
                        <TextView
                            android:layout_weight="1"
                            android:id="@+id/text_view_android"
                            android:textSize="16sp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/label_android"
                            android:textColor="#181737"
                            android:padding="16dp"
                            android:gravity="end"
                            />
                    </LinearLayout>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#dad8d8"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        >
                        <TextView
                            android:layout_weight="1"
                            android:id="@+id/text_view_country"
                            android:textSize="16sp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/label_country"
                            android:textColor="#a2a1b8"
                            android:padding="16dp"
                            android:gravity="start"
                            />
                        <TextView
                            android:layout_weight="1"
                            android:id="@+id/text_view_ethiopia"
                            android:textSize="16sp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/label_ethiopia"
                            android:textColor="#181737"
                            android:padding="16dp"
                            android:gravity="end"
                            />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#dad8d8"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        >

                        <TextView
                            android:id="@+id/text_view_email"
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="start"
                            android:padding="16dp"
                            android:text="@string/label_email"
                            android:textColor="#a2a1b8"
                            android:textSize="16sp" />
                        <TextView
                            android:layout_weight="1"
                            android:id="@+id/text_view_personal_email"
                            android:textSize="16sp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/label_personal_email"
                            android:textColor="#181737"
                            android:padding="16dp"
                            android:gravity="end"
                            />
                    </LinearLayout>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#dad8d8"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        >
                        <TextView
                            android:id="@+id/text_view_phone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="start"
                            android:padding="16dp"
                            android:text="@string/label_phone"
                            android:textColor="#a2a1b8"
                            android:textSize="16sp" />
                        <TextView
                            android:layout_weight="1"
                            android:id="@+id/text_view_phone_number"
                            android:textSize="16sp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/label_phone_number"
                            android:textColor="#181737"
                            android:padding="16dp"
                            android:gravity="end"
                            />
                    </LinearLayout>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#dad8d8" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        >
                        <TextView
                            android:id="@+id/text_view_slack"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="start"
                            android:padding="16dp"
                            android:text="@string/label_slack_username"
                            android:textColor="#a2a1b8"
                            android:textSize="16sp" />
                        <TextView
                            android:layout_weight="1"
                            android:id="@+id/text_view_display_name"
                            android:textSize="16sp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/label_slack_display_name"
                            android:textColor="#181737"
                            android:padding="16dp"
                            android:gravity="end"
                            />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>